mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localhost
  labels:
    app: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: http
      protocol: TCP
      port: 27017
      targetPort: 27017
